<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.android.pfe.metravel.login.StartupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/startup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textSize="@dimen/startup_app_name"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stu_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/login"
            android:text="@string/log_in"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stu_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/signup"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
